More correctly detect existing filetypes